<resources>
    <string name="app_name">TMessage</string>
    <string name="speech_prompt">Произнесите фразу для поиска</string>
    <string name="speech_not_supported">Ваше устройство не поддерживает голосовой ввод</string>
    <string name="id">ID</string>
    <string name="email">nortam81@gmail.com</string>

    <string name="new_message">Новое сообщение</string>
    <string name="add">Добавить</string>
    <string name="list">Список</string>
    <string name="cancel">Отмена</string>
    <string name="message_is_added">Сообщение добавлено</string>
    <string name="field_is_empty">Поле не заполнено</string>
    <string name="select_category">Выберите категорию</string>
    <string name="ok">Ок</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="search_error">В данный момент поиск невозможен. Попробуйте позже.</string>
    <string name="message">Сообщение</string>
    <string name="translate">Перевод</string>
    <string name="messages_not_found">Сообщений не найдено</string>
    <string name="all_messages">Все сообщения</string>
    <string name="new_list">Новый список</string>
    <string name="list_is_added">Список добавлен</string>
    <string name="list_already_exists">Список с таким именем уже существует</string>
    <string name="new_category">Новая категория</string>
    <string name="category_is_added">Категория добавлена</string>
    <string name="category_already_exists">Категория с таким именем уже существует</string>
    <string name="delete">Удаление</string>
    <string name="edit">Редактирование</string>
    <string name="to_continue">Продолжить</string>
    <string name="apply">Применить</string>
    <string name="non_existent_id">Несуществующий ID</string>
    <string name="category">Категория</string>
    <string name="message_was_successfully_changed">Сообщение успешно изменено. Обновите содержимое</string>
    <string name="category_was_successfully_changed">Категория успешно изменена. Обновите содержимое</string>
    <string name="list_was_successfully_changed">Список успешно изменен</string>
    <string name="reference">Справка</string>
    <string name="function_unavailable">В данный момент функция недоступна. Попробуйте позже</string>
    <string name="delete_messages_current_list_Q">Удалить все сообщения текущего списка?</string>
    <string name="messages_deleted">Все сообщения удалены</string>
    <string name="delete_current_list_Q">Удалить текущий список?</string>
    <string name="list_deleted">Список удален</string>
    <string name="delete_message_Q">Удалить сообщение</string>
    <string name="message_deleted">Сообщение удалено</string>
    <string name="delete_category_Q">Удалить категорию</string>
    <string name="category_deleted">Категория удалена</string>
    <string name="about_app_info">TMessage by Nortamn\n\nПриложение для хранения, редактирования и поиска фраз для общения на любом языке.</string>
    <string name="about_app_email">E-mail для связи с разработчиком: nortam81@gmail.com</string>
    <string name="name">Название</string>
    <string name="delete_messages_from_current_list">Удалить сообщения списка</string>
    <string name="delete_current_list">Удалить текущий список</string>
    <string name="delete_category">Удалить категорию</string>
    <string name="delete_message">Удалить сообщение</string>ID сообщения
    <string name="id_message">ID сообщения</string>
    <string name="new_value">Новое значение</string>
    <string name="new_translate">Новый перевод</string>
    <string name="Search_among_all_lists">Поиск по всем спискам</string>
</resources>
