<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="115dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="8dp">

        <RadioButton
            android:id="@+id/radioButton1_EditMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/message"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp" />

        <RadioButton
            android:id="@+id/radioButton2_EditMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/category"
            app:layout_constraintTop_toBottomOf="@+id/radioButton1_EditMenu"
            tools:layout_editor_absoluteX="8dp" />

        <RadioButton
            android:id="@+id/radioButton3_EditMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/list"
            app:layout_constraintTop_toBottomOf="@+id/radioButton2_EditMenu"
            tools:layout_editor_absoluteX="8dp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
