<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="MainActivity" >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/deleteAllMessagesButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/statusBarColor"
                android:onClick="deleteAllMessages"
                android:text="@string/delete_messages_from_current_list"
                android:textColor="?attr/colorControlNormal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/deleteAllButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/statusBarColor"
                android:onClick="deleteList"
                android:text="@string/delete_current_list"
                android:textColor="?attr/colorControlNormal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deleteAllMessagesButton" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="15dp"
                android:background="@color/background" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:background="@color/background" />

            <Spinner
                android:id="@+id/spinner_Delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                android:background="@color/background" />

            <Button
                android:id="@+id/categoryButton_Delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/holo_blue_dark"
                android:onClick="deleteCategoryById"
                android:text="@string/delete_category"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryIdEditText" />

            <EditText
                android:id="@+id/messageIdEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/id_message"
                android:inputType="number"
                android:maxLength="6"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deleteAllButton" />

            <Button
                android:id="@+id/deleteMessageButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/holo_blue_dark"
                android:onClick="deleteMessageById"
                android:text="@string/delete_message"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/messageIdEditText" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
